--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -153,6 +153,7 @@
 \newcommand{\orange}[1]{\textcolor{Orange}{#1}}
 \newcommand{\magenta}[1]{\textcolor{magenta}{#1}}
 \newcommand{\purple}[1]{\textcolor{purple}{#1}}
+\newcommand{\violet}[1]{\textcolor{violet}{#1}}
 \newcommand{\rosa}[1]{\textcolor{pink}{#1}}
 \newcommand{\marron}[1]{\textcolor{brown}{#1}}
 \newcommand{\transparente}[1]{\color[rgb]{1,1,1,0.5}{#1}}
