--- a/1-guia/ejercicios-1/ej-22-1.tex
+++ b/1-guia/ejercicios-1/ej-22-1.tex
@@ -53,19 +53,23 @@
 Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de relaciones}.
 
 \begin{enumerate}[label=\roman*)]
-  \item Haciendo un gráfico en estos ejercicios de pocos elementos sale fácil.\par
+  \item Haciendo un gráfico en estos ejercicios de pocos elementos sale fácil.
 
         \begin{minipage}{0.60\textwidth}
-          \textit{Reflexiva:}\par
+          \textit{Reflexiva:}
+
           Es reflexiva, porque hay bucles en todos los elementos de $A$.
 
-          \textit{Simétrica:}\par
+          \textit{Simétrica:}
+
           No es simétrica, dado que existe $(1, 5)$, pero no $(5, 1)$
 
-          \textit{Anti-Simétrica:}\par
+          \textit{Anti-Simétrica:}
+
           Es antisimétrica. No hay ningún par que tenga la vuelta, excepto los casos $x \relacion x$.
 
-          \textit{Transitiva:}\par
+          \textit{Transitiva:}
+          
           Es transitiva. La terna 1, 2, 5 es transitiva.
           La relación es R, AS y T, por lo tanto es una \textit{relación de orden}.
         \end{minipage}
@@ -74,65 +78,73 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
         \end{minipage}
 
   \item Primero notemos que $a + b$ es par puede pensarse como $a + b = 2k, k \in \naturales$, esto lo digo
-  para ver que como tenemos una igualdad, nos da una idea de que muy probablemente sea de equivalencia... para tener en cuenta no mas. \\
-  \textit{Reflexiva:}\par 
-  Hay que probar que $\forall a \in A, a \relacion a$. \\
-  Elijo un elemento arbitrario $a_0$, quiero ver que $a_0 \relacion a_0$. O sea que $a_0 + a_0$ es par, o
-  dicho de otro modo: $a_0 + a_0 = 2k$, usando esta ultima afirmacion, veo que $a_0 + a_0 = 2a_0$, que efectivamente
-  es un numero de la forma $2k$. Por lo tanto \underline{es reflexiva}. \\
-  
-  \textit{Simetrica: }\par
-  Que una relacion sea simetrica significa que $a \relacion b \entonces b \relacion a$. 
-  Es bastante trivial la verdad porque la suma es conmutativa, pero bueno, fijamos $a = a_0$, $b = b_0$. 
-  Como $a \relacion b$, entonces $a_0 + b_0 = 2k$, pero $a_0 + b_0 = b_0 + a_0$ porque la suma es conmutativa,
-  por lo tanto $b \relacion a$. Por lo tanto \underline{es simetrica}. \\
+        para ver que como tenemos una igualdad, nos da una idea de que muy probablemente sea de equivalencia... para tener en cuenta no mas.
 
-  \textit{Transitividad: }\par
-  Que una relacion sea transitiva significa que $a \relacion b \ytext b \relacion c \entonces a \relacion c$. 
-  Para mi la forma mas sencilla y clara de hacer este tipo de pruebas es armar un sistema de ecuaciones y ver
-  que sale. Tenemos: \par
-  $\begin{cases}
-    a_0 + b_0 = 2k \\
-    b_0 + c_0 = 2k
-  \end{cases}
-  \flecha{lo mismo que} \quad 
-  \begin{cases}
-    a_0 = 2k - b_0 \\
-    c_0 = 2k - b_0
-  \end{cases}
-  \flecha{sumamos las ecuaciones} \quad
-  a_0 + c_0 = 4k - 2b_0 \quad \llamada1
-  $
-  \par
-  $\llamada1$ se ve que toda esa expresion equivale a un numero de la forma $2k$, por lo tanto $a_0 + c_0 = 2k$.\\
-  \underline{Probando la transitividad}\\
+        \textit{Reflexiva:}
 
-  \textit{Antisimetrica: }\par
-  Que una relacion sea antisimetrica significa que $a \relacion b \ytext b \relacion a \entonces a = b$. \\
-  Podemos facilmente ver un contraejemplo, $2\relacion4$ y $4\relacion2$, pero $2\neq4$. 
-  Ya con el contraejemplo queda probado que no es antisimetrica, pero quiero a parte mostrar una prueba mas general para 
-  el que le interese...\\
-  Tenemos:
-  \[
-  \begin{cases}
-    a_0 + b_0 = 2k\\
-    b_0 + a_0 = 2k
-  \end{cases}
-  \]
-  Vemos que por conmutatividad de la suma las dos expresiones son identicas. Llamo $h = 2k$ y tengo: \\
-  $a_0 + b_0 = h \flecha \quad a_0 = h - b_0$. De aca obtengo otra manera de expresar la relacion como
-  \[
-  (h - b_0) \relacion b_0
-  \] 
-  Veo que si elijo un $h$ cualquiera (tiene que ser par), puedo elegir tambien cualquier $b_0$, y la regla de 
-  antisimetria no se va a cumplir para todos los numeros.
+        Hay que probar que $\forall a \in A, a \relacion a$. \\
+        Elijo un elemento arbitrario $a_0$, quiero ver que $a_0 \relacion a_0$. O sea que $a_0 + a_0$ es par, o
+        dicho de otro modo: $a_0 + a_0 = 2k$, usando esta ultima afirmacion, veo que $a_0 + a_0 = 2a_0$, que efectivamente
+        es un numero de la forma $2k$. Por lo tanto \underline{es reflexiva}. \\
+
+        \textit{Simetrica: }
+
+        Que una relacion sea simetrica significa que $a \relacion b \entonces b \relacion a$.
+        Es bastante trivial la verdad porque la suma es conmutativa, pero bueno, fijamos $a = a_0$, $b = b_0$.
+        Como $a \relacion b$, entonces $a_0 + b_0 = 2k$, pero $a_0 + b_0 = b_0 + a_0$ porque la suma es conmutativa,
+        por lo tanto $b \relacion a$. Por lo tanto \underline{es simetrica}. \\
+
+        \textit{Transitividad: }
+
+        Que una relacion sea transitiva significa que $a \relacion b \ytext b \relacion c \entonces a \relacion c$.
+        Para mi la forma mas sencilla y clara de hacer este tipo de pruebas es armar un sistema de ecuaciones y ver
+        que sale. Tenemos:
+        $\begin{cases}
+            a_0 + b_0 = 2k \\
+            b_0 + c_0 = 2k
+          \end{cases}
+          \flecha{lo mismo que} \quad
+          \begin{cases}
+            a_0 = 2k - b_0 \\
+            c_0 = 2k - b_0
+          \end{cases}
+          \flecha{sumamos las ecuaciones} \quad
+          a_0 + c_0 = 4k - 2b_0 \quad \llamada1
+        $
+
+        $\llamada1$ se ve que toda esa expresion equivale a un numero de la forma $2k$, por lo tanto $a_0 + c_0 = 2k$.\\
+        \underline{Probando la transitividad}
+
+        \textit{Antisimetrica: }
+
+        Que una relacion sea antisimetrica significa que $a \relacion b \ytext b \relacion a \entonces a = b$. \\
+        Podemos facilmente ver un contraejemplo, $2\relacion4$ y $4\relacion2$, pero $2\neq4$.
+        Ya con el contraejemplo queda probado que no es antisimetrica, pero quiero a parte mostrar una prueba mas general para
+        el que le interese...
+
+        Tenemos:
+        $$
+          \begin{cases}
+            a_0 + b_0 = 2k \\
+            b_0 + a_0 = 2k
+          \end{cases}
+        $$
+        Vemos que por conmutatividad de la suma las dos expresiones son identicas. Llamo $h = 2k$ y tengo: \\
+        $a_0 + b_0 = h \flecha \quad a_0 = h - b_0$. De aca obtengo otra manera de expresar la relacion como
+        $$
+          (h - b_0) \relacion b_0
+        $$
+        Veo que si elijo un $h$ cualquiera (tiene que ser par), puedo elegir tambien cualquier $b_0$, y la regla de
+        antisimetria no se va a cumplir para todos los numeros.
 
   \item  Primero notamos que como hay un $\leq$ ya nos da una idea de que probablemente vaya a ser una relacion de orden. \\
-        \textit{Reflexiva: }\par
+        \textit{Reflexiva: }
+
         Hay que probar que $\forall a \in A, a \relacion a$. \\
         Vemos que elijo un $a_0$ arbitrario y tengo que $a_0 \leq a_0$ lo cual es verdadero, por lo tanto \underline{es reflexiva}. \\
-        
-        \textit{Simetrica: }\par
+
+        \textit{Simetrica: }
+
         Hay que ver que $a \relacion b \entonces b \relacion a$ para $a\neq b$. \\
         Podemos buscar un contraejemplo, $2 \relacion 4$, pero $4 \norelacion 2$. \\
         Otra manera de verlo sino es reducir al absurdo, vemos por la hipotesis que $|a_0| \leq |b_0|$ implica $|b_0| \leq |a_0|$,
@@ -140,26 +152,29 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
         porque un numero no puede ser mayor que un numero y menor que ese mismo numero a la vez (Notesé que al principio excluí la posibilidad
         de que $a = b$ porque sino no tendria sentido esta prueba, ya que para ese caso esta la reflexividad). \\
 
-        \textit{Transitividad: }\par
-        Queremos ver que $a \relacion b \ytext b \relacion c \entonces a \relacion c$. \\
-        Justo en este caso es bastante sencillo de ver porque la propiedad estrella del $\leq$ es justamente la transitividad. 
-        Si tenemos $a_0 \leq b_0$ y $b_0 \leq c_0$, es lo mismo que tener $a_0 \leq b_0 \leq c_0$, y por transitividad del $\leq$, 
+        \textit{Transitividad: }
+
+        Queremos ver que $a \relacion b \ytext b \relacion c \entonces a \relacion c$.
+
+        Justo en este caso es bastante sencillo de ver porque la propiedad estrella del $\leq$ es justamente la transitividad.
+        Si tenemos $a_0 \leq b_0$ y $b_0 \leq c_0$, es lo mismo que tener $a_0 \leq b_0 \leq c_0$, y por transitividad del $\leq$,
         queda que $a_0 \leq c_0$. \underline{Probando la transitividad}
 
-        \textit{Antisimetrica: }\par    
+        \textit{Antisimetrica: }
         Queremos ver que $a \relacion b \ytext b \relacion a \entonces a = b$. \\
-        Aca no hay mucha vuelta, como la relacion \underline{no} es simetrica, no vamos a poder encontrar un 
+        Aca no hay mucha vuelta, como la relacion \underline{no} es simetrica, no vamos a poder encontrar un
         $a \relacion b \ytext b \relacion a$, a no ser que $a = b$, ahi si y en ese caso se cumple (esto ya lo sabemos
-        porque previamente ya desmotramos la reflexividad). Entonces se puede plantear algo como $a_0 \relacion a_0 
-        \ytext a_0 \relacion a_0 \entonces a_0 = a_0$. Lo cual claramente es verdadero, por lo tanto \underline{es antisimetrica}
-    
+        porque previamente ya desmotramos la reflexividad). Entonces se puede plantear algo como $a_0 \relacion a_0
+          \ytext a_0 \relacion a_0 \entonces a_0 = a_0$. Lo cual claramente es verdadero, por lo tanto \underline{es antisimetrica}
 
   \item \hacer
+
   \item \hacer
+
   \item $
           A =
           \partes(\set{n \en \naturales \talque n \leq 30})$, $\relacion$ definida por $X \relacion Y \sisolosi 2 \notin X \inter Y^c
-        $\par
+        $
         $$
           \begin{array}{|c|c|c|c|c|c|}
             \hline
@@ -170,20 +185,24 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
             \magenta{F} & \magenta{F} & \magenta{V} & \magenta{V} & \magenta{V}           & \magenta{V}           \\ \hline
           \end{array}$$.
 
-        \textit{Reflexiva:}\par
+        \textit{Reflexiva:}
+
         La relación es reflexiva ya que para que un elemento $X$ esté relacionado con sí mismo debe ocurrir
         que $X \relacion X \sisolosi 2 \notin X \inter X^c$, es decir $2 \notin \vacio$, lo cual es siempre cierto.
 
-        \textit{Simétrica:}\par
+        \textit{Simétrica:}
+
         La relación no es simétrica. Se puede ver con la \cyan{segunda y tercera} fila de la tabla con un contraejemplo.
         $X = \set{1}$ y $Y = \set{2},\, X,Y \subseteq A$, $X \relacion Y$, pero $Y \norelacion X$,
 
-        \textit{Anti-Simétrica:}\par
+        \textit{Anti-Simétrica:}
+
         La relación no es antisimétrica. Se puede ver con la \magenta{primera o cuarta} fila tabla con un contraejempl
         con un contraejemplo. Si $X = \set{1,2}$ e $Y = \set{2,3} \entonces X \relacion Y$ y además $Y \relacion X$
         con  $X \distinto Y$.
 
-        \textit{Transitiva:}\par
+        \textit{Transitiva:}
+
         Es transitiva. Si bien no es lo más fácil de explicar, se puede ver en la tabla que para tener 2 relaciones
         en una terna $X, Y, Z$ no se puede llegar nunca al caso de la segunda fila de la tabla, donde se lograría que
         $X \norelacion Z$
