polish ej 21 guia 5

--- a/5-guia/ejercicios-5/ej-21-5.tex
+++ b/5-guia/ejercicios-5/ej-21-5.tex
@@ -69,8 +69,9 @@ $$
   }
 $$
 Para cada uno de esos casos quiero encontrar $\magenta{Y}$ así puedo después volver al principio del ejercicio
-para calcular lo que piden. Pero en el sistema $\llamada3$ es más fácil ponerlo directamente en el $\llamada1$,
-porque es un solo valor. Igual porque soy un tipazo lo resuelvo de forma mecánica por si no lo ves:
+para calcular lo que piden.
+El sistema $\llamada3$ es para un solo valor de $n$, onda lo más fácil es poner $n = 1$ en $\llamada1$ y fin,
+pero igual porque \textit{soy un tipazo} lo resuelvo de forma mecánica por si no lo ves:
 $$
   \flecha{$\llamada3$}
   \magenta{Y} = 4\blue{k} + 2
