add ej extra 10 guia 2

--- a/5-guia/ejercicios-5/ej-21-5.tex
+++ b/5-guia/ejercicios-5/ej-21-5.tex
@@ -87,7 +87,7 @@ $$
 Reemplazando ese resultado en $\llamada1$:
 $$
   \cajaResultado{
-    r_{13}(2^{\green{2}}) = 4 \quad \text{para $n = 1$}
+    r_{13}(2^{\green{2}}) = \violet{4} \quad \text{para $n = 1$}
   }
 $$
 Como ya habrás notado, mucho más barato era ir a $\llamada1$ y poner $n = 1$.
@@ -108,7 +108,7 @@ $$
 Reemplazando ese resultado en $\llamada1$:
 $$
   \cajaResultado{
-    r_{13}(2^{\green{4}}) = 3 \quad \text{para $\congruencia{n}{0}{2}$}
+    r_{13}(2^{\green{4}}) = \violet{3} \quad \text{para $\congruencia{n}{0}{2}$}
   }
 $$
 
@@ -130,7 +130,7 @@ $$
   \cajaResultado{
     r_{13}(2^{\green{8}}) =
     r_{13}(2^{\green{4}} \cdot 2^{\green{4}}) =
-    9 \quad \text{para $\congruencia{n}{1}{2}$}
+    \violet{9} \quad \text{para $\congruencia{n}{1}{2}$}
   }
 $$
 
@@ -141,9 +141,9 @@ $$
   \cajaResultado{
     r_{13}(2^{2^n}) =
     \llave{rcl}{
-      4 & \text{si} & n = 1 \\
-      3 & \text{si} & \congruencia{n}{0}{2} \\
-      9 & \text{si} & \congruencia{n}{1}{2} \ytext n \geq 2 \\
+      \violet{4} & \text{si} & n = 1 \\
+      \violet{3} & \text{si} & \congruencia{n}{0}{2} \\
+      \violet{9} & \text{si} & \congruencia{n}{1}{2} \ytext n \geq 2 \\
     }
   }
 $$
