--- a/5-guia/ejercicios-5/ej-23-5.tex
+++ b/5-guia/ejercicios-5/ej-23-5.tex
@@ -99,5 +99,5 @@ $$
 $$
 
 \begin{aportes}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
