--- a/7-guia/ejercicios-7-extra/ej-extra-8-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-8-7.tex
@@ -62,7 +62,7 @@
         $$
 
         Si no entendés el porqué de eso mirate \hyperlink{teoria-7:raicesMultiples}{esto de las notas teóricas}, para tener contexto.
-        Básicamente si $\alpha$ es una raíz de $f$ y también de $f'$, entoences es una raíz \textit{por lo menos} doble de $f$.\par\bigskip
+        Básicamente si $\alpha$ es una raíz de $f$ y también de $f'$, entonces es una raíz \textit{por lo menos} doble de $f$.\par\bigskip
 
         En el tercer punto, nos dicen que tiene al menos 2 raíces en $\enteros$. ¿Una de esas podría ser el 1 que obtuvimos como raíz de $G_3$?,
         Dejame que lo piense.
@@ -134,6 +134,6 @@
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
 \end{aportes}
