--- a/7-guia/ejercicios-7/ej-37-7.tex
+++ b/7-guia/ejercicios-7/ej-37-7.tex
@@ -1,1 +1,11 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+  Sean $a, b, c \en \complejos$ las raíces de $2X^3 - 3X^2 + 4X + 1$. Determinar
+  \begin{enumerate}[label=\roman*)]
+    \begin{multicols}{3}
+      \item $a + b + c$,
+      \item $ab + ac + bc$,
+      \item $abc$ .
+    \end{multicols}
+  \end{enumerate}
+\end{enunciado}
+\hacer
