complete ej 1 guia 6

--- a/6-guia/ejercicios-6/ej-1-6.tex
+++ b/6-guia/ejercicios-6/ej-1-6.tex
@@ -79,11 +79,18 @@ $$
           \igual{\red{!!}}
           -1 - 6\sqrt{6} + i(2\sqrt{6} - 3)
         $$
-        Donde en \red{!!} es distribuir y luego sacar factor común en los términos con $i$, nada extraño.\par
+        Donde en \red{!!} es distribuir y luego sacar factor común en los términos con $i$, nada extraño.
 
-        \bigskip
-
-        ehm... ¿Qué es esta mierda? 3 opciones, está mal el enunciado, lo estoy haciendo mal o los profesores nos están haciendo \textit{bullying}.
+        Después de hacer las cuentas pertinentes:
+        $$
+          \llave{l}{
+            \re(z) = -(1+6\sqrt{6})      \\
+            \im(z) = 2\sqrt{6} - 3    \\
+            |z| = 5\sqrt{10}         \\
+            \re(z^{-1}) = -\frac{(1+6\sqrt{6})}{250} \\
+            \im(i \cdot z) = \re(z) = -(1+6\sqrt{6})
+          }
+        $$
 
   \item Atento a que $i^4 \igual{$\llamada1$} 1$:
         $$
