--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -25,8 +25,8 @@
 \def\entonces{\implies}
 \def\noEntonces{\centernot\Rightarrow}
 
-\def\sisolosi{\iff} % largo
-\def\sii{\Leftrightarrow} % corto
+\DeclareMathOperator{\sisolosi}{\iff} % largo
+\DeclareMathOperator{\sii}{\Leftrightarrow} % corto
 
 \def\clase{\overline}
 \def\ord{\text{ord}}
