fix error ej 1 iv guia 6

--- a/6-guia/ejercicios-6/ej-1-6.tex
+++ b/6-guia/ejercicios-6/ej-1-6.tex
@@ -19,13 +19,13 @@ $$
   \llave{l}{
     a = \re(z) \en \reales                                                   \\
     b = \im(z) \en \reales                                                   \\
-    z^{-1} = \frac{a -ib}{a^2 + b^2} = \frac{\conj{z}}{|z|^2} \\
+    z^{-1} =  \frac{\conj{z}}{|z|^2} = \frac{a -ib}{a^2 + b^2} \\
     \magenta{\im(i \cdot z)} = \im(i\cdot a - b) = a = \magenta{\re(z)}
   }
 $$
 Y en notación exponencial:
 $$
-  z = r \cdot e^{i\theta} \flecha{donde}[$r>0$]
+  z = r \cdot e^{i\theta} \flecha{donde}[$r > 0$]
   \llave{l}{
     r \cdot \cos(\theta) = \re(z) \en \reales                                                                                           \\
     r \cdot \sin(\theta) = \im(z) \en \reales                                                                                           \\
@@ -118,13 +118,6 @@ $$
             \im(i \cdot z) = \re(z) = 1
           }
         $$
-        $$
-          \re(z) = 1 ,\,
-          \im(z) = 0 ,\,
-          |z| = 1 ,\,
-          \re(z^{-1}) = 1,\,
-          \im(i \cdot z) = i
-        $$
 
   \item Fácil con exponenciales:
         $$
@@ -142,11 +135,13 @@ $$
         $$
         Finalmente:
         $$
-          \re(z) = 0 ,\,
-          \im(z) = 1 ,\,
-          |z| = 1 ,\,
-          \re(z^{-1}) \igual{\red{!}} \re(-i) = 0,\,
-          \im(i \cdot z) = -1
+          \llave{l}{
+            \re(z) = 0,\\
+            \im(z) = 1, \\
+            |z| = 1, \\
+            \re(z^{-1}) \igual{\red{!}} \re(-i) = 0, \\
+            \im(i \cdot z) = 0
+          }
         $$
 
   \item Fácil con exponenciales:
